# rust-code-snippet

./: .gitignore  Cargo.toml
examples/: args.rs  as-ref.rs  as-str.rs  buf-reader.rs  builder.rs  command-exist.rs  cow.rs  crossterm.rs  default-generic.rs  deref.rs  deref_coercion.rs  env_log.rs  envconfig.rs  error.rs  ferris-says.rs  file-exist.rs  file-macro.rs  file.txt  filter-map.rs  flat_map.rs  for_each.rs  formatted-print.rs  from-str.rs  from.rs  from_fn.rs  glob.rs  hello-world.rs  if-let.rs  include-str-macro.rs  infer-type.rs  int-to-str.rs  into.rs  lazy-static.rs  len-int.rs  life-time.rs  map.rs  multi-line-str.rs  partial-eq.rs  partition.rs  rand.rs  (+23 more)
