[package]
name = "rust-code-snippet"
version = "0.1.0"
authors = ["mahdi <mahdi.robatipoor@gmail.com>"]
edition = "2018"

[dependencies]
ferris-says = "0.1.1"
notifica = "1.0.2"
lazy_static = "1.3.0"
graceful = "0.1.1"
rand = "0.6.5"
clipboard = "0.5.0"
envconfig = "0.5.1"
envconfig_derive = "0.5.1"
env_logger = "0.6.1"
log = "0.4.6"
serde_json = "1.0.39"
serde = "1.0.90"
serde_derive = "1.0.90"
strum = "0.15.0"
strum_macros = "0.15.0"
crossterm = "0.9.2"
glob = "0.3.0"
regex = "1.1.6"
envy = "0.4.0"
rayon = "1.0.3"
